config/deploy/prod/web-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: prod-namespace
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: web
